; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_wavpackenc.c_decorr_stereo_buffer.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_wavpackenc.c_decorr_stereo_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, %struct.Decorr* }
%struct.Decorr = type { i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32*, i32*, i32*, i32*, i32, i32)* @decorr_stereo_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decorr_stereo_buffer(%struct.TYPE_3__* %0, i32* %1, i32* %2, i32* %3, i32* %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.TYPE_3__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.Decorr, align 4
  %16 = alloca %struct.Decorr*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %20 = bitcast %struct.Decorr* %15 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %20, i8 0, i64 36, i1 false)
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  %23 = load %struct.Decorr*, %struct.Decorr** %22, align 8
  %24 = load i32, i32* %14, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %23, i64 %25
  store %struct.Decorr* %26, %struct.Decorr** %16, align 8
  %27 = load %struct.Decorr*, %struct.Decorr** %16, align 8
  %28 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %17, align 4
  %30 = load %struct.Decorr*, %struct.Decorr** %16, align 8
  %31 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  store i32 %32, i32* %19, align 4
  %33 = load i32, i32* %17, align 4
  %34 = icmp eq i32 %33, 7
  br i1 %34, label %35, label %36

35:                                               ; preds = %7
  store i32 7, i32* %18, align 4
  br label %44

36:                                               ; preds = %7
  %37 = load i32, i32* %17, align 4
  %38 = icmp slt i32 %37, 2
  br i1 %38, label %39, label %40

39:                                               ; preds = %36
  store i32 3, i32* %18, align 4
  br label %43

40:                                               ; preds = %36
  %41 = load i32, i32* %17, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %18, align 4
  br label %43

43:                                               ; preds = %40, %39
  br label %44

44:                                               ; preds = %43, %35
  %45 = load i32, i32* %19, align 4
  %46 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 1
  store i32 %45, i32* %46, align 4
  %47 = load i32, i32* %18, align 4
  %48 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 0
  store i32 %47, i32* %48, align 4
  %49 = load i32*, i32** %9, align 8
  %50 = load i32*, i32** %10, align 8
  %51 = load i32*, i32** %11, align 8
  %52 = load i32*, i32** %12, align 8
  %53 = load i32, i32* %13, align 4
  %54 = call i32 @FFMIN(i32 2048, i32 %53)
  %55 = call i32 @decorr_stereo(i32* %49, i32* %50, i32* %51, i32* %52, i32 %54, %struct.Decorr* %15, i32 -1)
  %56 = load i32, i32* %17, align 4
  %57 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 0
  store i32 %56, i32* %57, align 4
  %58 = load i32, i32* %14, align 4
  %59 = icmp eq i32 %58, 0
  br i1 %59, label %60, label %62

60:                                               ; preds = %44
  %61 = call i32 @reverse_decorr(%struct.Decorr* %15)
  br label %69

62:                                               ; preds = %44
  %63 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 7
  %64 = load i32, i32* %63, align 4
  %65 = call i32 @CLEAR(i32 %64)
  %66 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 6
  %67 = load i32, i32* %66, align 4
  %68 = call i32 @CLEAR(i32 %67)
  br label %69

69:                                               ; preds = %62, %60
  %70 = load %struct.Decorr*, %struct.Decorr** %16, align 8
  %71 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %70, i32 0, i32 7
  %72 = load i32, i32* %71, align 4
  %73 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 7
  %74 = load i32, i32* %73, align 4
  %75 = call i32 @memcpy(i32 %72, i32 %74, i32 4)
  %76 = load %struct.Decorr*, %struct.Decorr** %16, align 8
  %77 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %76, i32 0, i32 6
  %78 = load i32, i32* %77, align 4
  %79 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 6
  %80 = load i32, i32* %79, align 4
  %81 = call i32 @memcpy(i32 %78, i32 %80, i32 4)
  %82 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 2
  %83 = load i32, i32* %82, align 4
  %84 = load %struct.Decorr*, %struct.Decorr** %16, align 8
  %85 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %84, i32 0, i32 2
  store i32 %83, i32* %85, align 4
  %86 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 3
  %87 = load i32, i32* %86, align 4
  %88 = load %struct.Decorr*, %struct.Decorr** %16, align 8
  %89 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %88, i32 0, i32 3
  store i32 %87, i32* %89, align 4
  %90 = load i32, i32* %17, align 4
  %91 = icmp eq i32 %90, 0
  br i1 %91, label %92, label %127

92:                                               ; preds = %69
  %93 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 0
  store i32 1, i32* %93, align 4
  %94 = load i32*, i32** %9, align 8
  %95 = load i32*, i32** %10, align 8
  %96 = load i32*, i32** %11, align 8
  %97 = load i32*, i32** %12, align 8
  %98 = load i32, i32* %13, align 4
  %99 = call i32 @decorr_stereo(i32* %94, i32* %95, i32* %96, i32* %97, i32 %98, %struct.Decorr* %15, i32 1)
  %100 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 0
  store i32 0, i32* %100, align 4
  %101 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 7
  %102 = load i32, i32* %101, align 4
  %103 = load %struct.Decorr*, %struct.Decorr** %16, align 8
  %104 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %103, i32 0, i32 7
  %105 = load i32, i32* %104, align 4
  %106 = call i32 @memcpy(i32 %102, i32 %105, i32 4)
  %107 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 6
  %108 = load i32, i32* %107, align 4
  %109 = load %struct.Decorr*, %struct.Decorr** %16, align 8
  %110 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %109, i32 0, i32 6
  %111 = load i32, i32* %110, align 4
  %112 = call i32 @memcpy(i32 %108, i32 %111, i32 4)
  %113 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 4
  %114 = load i32, i32* %113, align 4
  %115 = load i32, i32* %13, align 4
  %116 = sdiv i32 %114, %115
  %117 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 2
  store i32 %116, i32* %117, align 4
  %118 = load %struct.Decorr*, %struct.Decorr** %16, align 8
  %119 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %118, i32 0, i32 2
  store i32 %116, i32* %119, align 4
  %120 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 5
  %121 = load i32, i32* %120, align 4
  %122 = load i32, i32* %13, align 4
  %123 = sdiv i32 %121, %122
  %124 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %15, i32 0, i32 3
  store i32 %123, i32* %124, align 4
  %125 = load %struct.Decorr*, %struct.Decorr** %16, align 8
  %126 = getelementptr inbounds %struct.Decorr, %struct.Decorr* %125, i32 0, i32 3
  store i32 %123, i32* %126, align 4
  br label %127

127:                                              ; preds = %92, %69
  %128 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %129 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %128, i32 0, i32 0
  %130 = load i64, i64* %129, align 8
  %131 = icmp ne i64 %130, 0
  br i1 %131, label %132, label %139

132:                                              ; preds = %127
  %133 = load i32*, i32** %9, align 8
  %134 = load i32*, i32** %10, align 8
  %135 = load i32*, i32** %11, align 8
  %136 = load i32*, i32** %12, align 8
  %137 = load i32, i32* %13, align 4
  %138 = call i32 @decorr_stereo(i32* %133, i32* %134, i32* %135, i32* %136, i32 %137, %struct.Decorr* %15, i32 1)
  br label %146

139:                                              ; preds = %127
  %140 = load i32*, i32** %9, align 8
  %141 = load i32*, i32** %10, align 8
  %142 = load i32*, i32** %11, align 8
  %143 = load i32*, i32** %12, align 8
  %144 = load i32, i32* %13, align 4
  %145 = call i32 @decorr_stereo_quick(i32* %140, i32* %141, i32* %142, i32* %143, i32 %144, %struct.Decorr* %15)
  br label %146

146:                                              ; preds = %139, %132
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @decorr_stereo(i32*, i32*, i32*, i32*, i32, %struct.Decorr*, i32) #2

declare dso_local i32 @FFMIN(i32, i32) #2

declare dso_local i32 @reverse_decorr(%struct.Decorr*) #2

declare dso_local i32 @CLEAR(i32) #2

declare dso_local i32 @memcpy(i32, i32, i32) #2

declare dso_local i32 @decorr_stereo_quick(i32*, i32*, i32*, i32*, i32, %struct.Decorr*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
